🔧 Fix agents.yaml path for Render deployment
- Copy agents.yaml to agent directory
- Update Dockerfile to include agents.yaml
- Fix config path to use relative path
- Resolves 'No such file or directory' error

--- a/agent/Dockerfile
+++ b/agent/Dockerfile
@@ -22,6 +22,9 @@ RUN pip install --no-cache-dir -r requirements.txt
 # Copy application code
 COPY . .
 
+# Ensure agents.yaml is in the correct location
+COPY agents.yaml ./agents.yaml
+
 # Create non-root user
 RUN groupadd -r agents && useradd -r -g agents agents
 RUN chown -R agents:agents /app
