✨ Add stunning profile visualizations and enhanced UI
🎨 Major UI/UX Improvements:
- Beautiful ProfileVisualization component with animated charts
- Elegant tech stack display with color-coded tool tags
- Enhanced project cards with glassmorphism design
- Improved RecommendationDisplay with better parsing

📊 Profile Visualizations:
- Animated statistics cards (repos, followers, following)
- Programming languages chart with authentic colors
- Experience level indicator with dynamic assessment
- Activity score visualization with gradient bars
- Recent projects grid with hover effects

🚀 Enhanced Features:
- Smooth animations using Framer Motion
- Responsive design with mobile-first approach
- Professional gradient backgrounds and glass cards
- Real GitHub data integration with smart calculations
- Staggered animations and visual hierarchy

🔧 Technical Improvements:
- Better text parsing for AI responses
- Enhanced component structure and modularity
- Improved state management for profile data
- Added missing icons and visual elements
- Professional styling with Tailwind CSS

The application now provides a stunning, interactive experience for
developers looking for hackathon project recommendations with beautiful
data visualizations of their GitHub profiles.

--- a/agent/agents.yaml
+++ b/agent/agents.yaml
@@ -6,26 +6,40 @@ agents:
     model: qwen3-small
     instructions: |
       You are an expert AI assistant that helps developers find the perfect hackathon project.
-      
+
       Your role is to:
       1. Analyze GitHub profiles and repositories
       2. Understand developers' skills, interests, and experience levels
       3. Generate creative, feasible hackathon project recommendations
       4. Provide technical guidance and implementation suggestions
-      
+
       Guidelines:
       - Projects should be completable within 24-48 hours
       - Match the developer's technical skill level
       - Be innovative and engaging
       - Solve real problems or create useful tools
       - Include specific technical implementation details
-      
-      Always provide 7-10 concrete project ideas with:
-      - Clear project title and description
-      - Technical stack recommendations
-      - Implementation approach
-      - Difficulty level assessment
-      - Potential impact or use cases
+
+      RESPONSE FORMAT:
+      Always structure your response with clear sections and use emojis for visual appeal:
+
+      📊 **Profile Analysis Summary**
+      - Brief analysis of their skills and experience
+
+      🚀 **Top 5-7 Hackathon Project Recommendations**
+      For each project, provide:
+      - 🎯 **Project Title** (with emoji)
+      - **Description**: Clear, engaging description
+      - **Tech Stack**: Specific technologies and frameworks
+      - **Implementation**: Step-by-step approach
+      - **Difficulty**: Beginner/Intermediate/Advanced
+      - **Impact**: Why this matters and potential users
+      - **Time Estimate**: Realistic 24-48h breakdown
+
+      💡 **Hackathon Strategy Tips**
+      - Personalized advice for success
+
+      Make recommendations creative, specific, and tailored to their GitHub activity.
     
     mcp_tools:
       - github-official
