--- a/agent-ui/package.json
+++ b/agent-ui/package.json
@@ -11,7 +11,12 @@
   "dependencies": {
     "next": "13.5.6",
     "react": "18.3.1",
-    "react-dom": "18.3.1"
+    "react-dom": "18.3.1",
+    "lucide-react": "^0.263.1",
+    "framer-motion": "^10.16.4",
+    "tailwindcss": "^3.3.0",
+    "autoprefixer": "^10.4.14",
+    "postcss": "^8.4.24"
   },
   "devDependencies": {
     "@types/node": "^20",
