🔧 Fix GitHub API rate limiting for production deployments
🎯 Problem Solved:
- Fixed 403 GitHub API rate limiting errors in Vercel/Render deployments
- Backend was not using GitHub personal access token properly

🔧 Configuration Updates:
- Updated compose.yaml to pass GITHUB_PERSONAL_ACCESS_TOKEN to agents service
- Fixed .env file to use correct environment variable format
- Updated .mcp.env to use GITHUB_PERSONAL_ACCESS_TOKEN (underscores not dots)

📦 Production Deployment Support:
- Added render.yaml configuration for easy Render deployment
- Configured environment variables for both backend and frontend services
- Set up proper service communication between frontend and backend

🚀 Deployment Instructions:
For Render (Backend):
- Add GITHUB_PERSONAL_ACCESS_TOKEN environment variable in dashboard
- Add GEMINI_API_KEY environment variable in dashboard

For Vercel (Frontend):
- Add AGENTS_URL=https://hacksy.onrender.com environment variable

💡 Benefits:
- Increased GitHub API rate limits from 60/hour to 5000/hour
- Eliminates 403 rate limiting errors for legitimate usage
- Proper authentication for GitHub API calls
- Production-ready configuration for both platforms

--- a/compose.yaml
+++ b/compose.yaml
@@ -13,6 +13,8 @@ services:
       - MCPGATEWAY_URL=mcp-gateway:8811
       # Gemini API configuration
       - GEMINI_API_KEY=${GEMINI_API_KEY}
+      # GitHub API configuration
+      - GITHUB_PERSONAL_ACCESS_TOKEN=${GITHUB_PERSONAL_ACCESS_TOKEN}
     volumes:
       # mount the agents configuration
       - ./agents.yaml:/agents.yaml
